--- a/shopping-express-go.html
+++ b/shopping-express-go.html
@@ -35,8 +35,8 @@
         <link rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800,300i,400i,500i,600i,700i,800i&display=swap">
     </noscript>
-    <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=8DE62H">
-    <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=8DE62H" type="text/css">
+    <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=xJU5HF">
+    <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=xJU5HF" type="text/css">
 
 
 
@@ -85,9 +85,11 @@
                         <a class="iconfont-wrapper"
                             href="https://wa.me/556192914398?text=Ol%C3%A1%2C%20gostaria%20de%20conhecer%20melhor%20a%20Tr%C3%ADade%20Construtora"
                             target="_blank">
-                            <span class="p-2 mbr-iconfont socicon-whatsapp socicon" style="font-size: 40px;"></span>
+                            <span class="p-2 mbr-iconfont socicon-whatsapp socicon" style="font-size: 35px;"></span>
                         </a>
-
+                        <a class="iconfont-wrapper" href="https://www.instagram.com/triiade_construtora/">
+                            <span class="p-2 mbr-iconfont socicon-instagram socicon" style="font-size: 35px;"></span>
+                        </a>
 
 
                     </div>
@@ -183,9 +185,9 @@
             <div class="row mbr-gallery">
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ullYy1elhM-modal" data-bs-target="#ullYy1elhM-modal">
+                        data-target="#ulmdXxbU1A-modal" data-bs-target="#ulmdXxbU1A-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0047.jpg" alt="" data-slide-to="0"
-                            data-bs-slide-to="0" data-target="#lb-ullYy1elhM" data-bs-target="#lb-ullYy1elhM">
+                            data-bs-slide-to="0" data-target="#lb-ulmdXxbU1A" data-bs-target="#lb-ulmdXxbU1A">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -194,9 +196,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ullYy1elhM-modal" data-bs-target="#ullYy1elhM-modal">
+                        data-target="#ulmdXxbU1A-modal" data-bs-target="#ulmdXxbU1A-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0046.jpg" alt="" data-slide-to="1"
-                            data-bs-slide-to="1" data-target="#lb-ullYy1elhM" data-bs-target="#lb-ullYy1elhM">
+                            data-bs-slide-to="1" data-target="#lb-ulmdXxbU1A" data-bs-target="#lb-ulmdXxbU1A">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -205,9 +207,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ullYy1elhM-modal" data-bs-target="#ullYy1elhM-modal">
+                        data-target="#ulmdXxbU1A-modal" data-bs-target="#ulmdXxbU1A-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0044.jpg" alt="" data-slide-to="2"
-                            data-bs-slide-to="2" data-target="#lb-ullYy1elhM" data-bs-target="#lb-ullYy1elhM">
+                            data-bs-slide-to="2" data-target="#lb-ulmdXxbU1A" data-bs-target="#lb-ulmdXxbU1A">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -216,9 +218,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ullYy1elhM-modal" data-bs-target="#ullYy1elhM-modal">
+                        data-target="#ulmdXxbU1A-modal" data-bs-target="#ulmdXxbU1A-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0043.jpeg" alt="" data-slide-to="3"
-                            data-bs-slide-to="3" data-target="#lb-ullYy1elhM" data-bs-target="#lb-ullYy1elhM">
+                            data-bs-slide-to="3" data-target="#lb-ulmdXxbU1A" data-bs-target="#lb-ulmdXxbU1A">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -227,9 +229,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ullYy1elhM-modal" data-bs-target="#ullYy1elhM-modal">
+                        data-target="#ulmdXxbU1A-modal" data-bs-target="#ulmdXxbU1A-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0042.jpeg" alt="" data-slide-to="4"
-                            data-bs-slide-to="4" data-target="#lb-ullYy1elhM" data-bs-target="#lb-ullYy1elhM">
+                            data-bs-slide-to="4" data-target="#lb-ulmdXxbU1A" data-bs-target="#lb-ulmdXxbU1A">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -238,9 +240,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ullYy1elhM-modal" data-bs-target="#ullYy1elhM-modal">
+                        data-target="#ulmdXxbU1A-modal" data-bs-target="#ulmdXxbU1A-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0041.jpg" alt="" data-slide-to="5"
-                            data-bs-slide-to="5" data-target="#lb-ullYy1elhM" data-bs-target="#lb-ullYy1elhM">
+                            data-bs-slide-to="5" data-target="#lb-ulmdXxbU1A" data-bs-target="#lb-ulmdXxbU1A">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -249,9 +251,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ullYy1elhM-modal" data-bs-target="#ullYy1elhM-modal">
+                        data-target="#ulmdXxbU1A-modal" data-bs-target="#ulmdXxbU1A-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0040.jpg" alt="" data-slide-to="6"
-                            data-bs-slide-to="6" data-target="#lb-ullYy1elhM" data-bs-target="#lb-ullYy1elhM">
+                            data-bs-slide-to="6" data-target="#lb-ulmdXxbU1A" data-bs-target="#lb-ulmdXxbU1A">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -260,9 +262,9 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 item gallery-image">
                     <div class="item-wrapper mb-3" data-toggle="modal" data-bs-toggle="modal"
-                        data-target="#ullYy1elhM-modal" data-bs-target="#ullYy1elhM-modal">
+                        data-target="#ulmdXxbU1A-modal" data-bs-target="#ulmdXxbU1A-modal">
                         <img class="w-100" src="assets/images/img-20240804-wa0038.jpg" alt="" data-slide-to="7"
-                            data-bs-slide-to="7" data-target="#lb-ullYy1elhM" data-bs-target="#lb-ullYy1elhM">
+                            data-bs-slide-to="7" data-target="#lb-ulmdXxbU1A" data-bs-target="#lb-ulmdXxbU1A">
                         <div class="icon-wrapper">
                             <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         </div>
@@ -277,11 +279,11 @@
 
             </div>
 
-            <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="ullYy1elhM-modal">
+            <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="ulmdXxbU1A-modal">
                 <div class="modal-dialog" role="document">
                     <div class="modal-content">
                         <div class="modal-body">
-                            <div class="carousel slide" data-pause="false" data-bs-pause="false" id="lb-ullYy1elhM"
+                            <div class="carousel slide" data-pause="false" data-bs-pause="false" id="lb-ulmdXxbU1A"
                                 data-interval="5000" data-bs-interval="5000">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
@@ -317,21 +319,21 @@
                                 </div>
                                 <ol class="carousel-indicators">
                                     <li data-slide-to="0" data-bs-slide-to="0" class="active"
-                                        data-target="#lb-ullYy1elhM" data-bs-target="#lb-ullYy1elhM"></li>
-                                    <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-ullYy1elhM"
-                                        data-bs-target="#lb-ullYy1elhM"></li>
-                                    <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-ullYy1elhM"
-                                        data-bs-target="#lb-ullYy1elhM"></li>
-                                    <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-ullYy1elhM"
-                                        data-bs-target="#lb-ullYy1elhM"></li>
-                                    <li data-slide-to="4" data-bs-slide-to="4" data-target="#lb-ullYy1elhM"
-                                        data-bs-target="#lb-ullYy1elhM"></li>
-                                    <li data-slide-to="5" data-bs-slide-to="5" data-target="#lb-ullYy1elhM"
-                                        data-bs-target="#lb-ullYy1elhM"></li>
-                                    <li data-slide-to="6" data-bs-slide-to="6" data-target="#lb-ullYy1elhM"
-                                        data-bs-target="#lb-ullYy1elhM"></li>
-                                    <li data-slide-to="7" data-bs-slide-to="7" data-target="#lb-ullYy1elhM"
-                                        data-bs-target="#lb-ullYy1elhM"></li>
+                                        data-target="#lb-ulmdXxbU1A" data-bs-target="#lb-ulmdXxbU1A"></li>
+                                    <li data-slide-to="1" data-bs-slide-to="1" data-target="#lb-ulmdXxbU1A"
+                                        data-bs-target="#lb-ulmdXxbU1A"></li>
+                                    <li data-slide-to="2" data-bs-slide-to="2" data-target="#lb-ulmdXxbU1A"
+                                        data-bs-target="#lb-ulmdXxbU1A"></li>
+                                    <li data-slide-to="3" data-bs-slide-to="3" data-target="#lb-ulmdXxbU1A"
+                                        data-bs-target="#lb-ulmdXxbU1A"></li>
+                                    <li data-slide-to="4" data-bs-slide-to="4" data-target="#lb-ulmdXxbU1A"
+                                        data-bs-target="#lb-ulmdXxbU1A"></li>
+                                    <li data-slide-to="5" data-bs-slide-to="5" data-target="#lb-ulmdXxbU1A"
+                                        data-bs-target="#lb-ulmdXxbU1A"></li>
+                                    <li data-slide-to="6" data-bs-slide-to="6" data-target="#lb-ulmdXxbU1A"
+                                        data-bs-target="#lb-ulmdXxbU1A"></li>
+                                    <li data-slide-to="7" data-bs-slide-to="7" data-target="#lb-ulmdXxbU1A"
+                                        data-bs-target="#lb-ulmdXxbU1A"></li>
 
 
 
@@ -343,12 +345,12 @@
                                     aria-label="Close">
                                 </a>
                                 <a class="carousel-control-prev carousel-control" role="button" data-slide="prev"
-                                    data-bs-slide="prev" href="#lb-ullYy1elhM">
+                                    data-bs-slide="prev" href="#lb-ulmdXxbU1A">
                                     <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                     <span class="sr-only visually-hidden">Previous</span>
                                 </a>
                                 <a class="carousel-control-next carousel-control" role="button" data-slide="next"
-                                    data-bs-slide="next" href="#lb-ullYy1elhM">
+                                    data-bs-slide="next" href="#lb-ulmdXxbU1A">
                                     <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                     <span class="sr-only visually-hidden">Next</span>
                                 </a>
@@ -373,30 +375,19 @@
                 <div class="col-12 mt-4">
                     <div class="social-row">
                         <div class="soc-item">
-                            <a target="_blank">
-                                <span class="mbr-iconfont socicon socicon-facebook display-7"></span>
+                            <a href="https://www.instagram.com/triiade_construtora/" target="_blank">
+                                <span class="mbr-iconfont display-7 socicon-instagram socicon"></span>
                             </a>
                         </div>
                         <div class="soc-item">
-                            <a target="_blank">
-                                <span class="mbr-iconfont socicon-twitter socicon"></span>
+                            <a href="https://wa.me/556192914398?text=Ol%C3%A1%2C%20gostaria%20de%20conhecer%20melhor%20a%20Tr%C3%ADade%20Construtora"
+                                target="_blank">
+                                <span class="mbr-iconfont socicon-whatsapp socicon"></span>
                             </a>
                         </div>
-                        <div class="soc-item">
-                            <a target="_blank">
-                                <span class="mbr-iconfont socicon-instagram socicon"></span>
-                            </a>
-                        </div>
-                        <div class="soc-item">
-                            <a target="_blank">
-                                <span class="mbr-iconfont socicon socicon-linkedin"></span>
-                            </a>
-                        </div>
-                        <div class="soc-item">
-                            <a target="_blank">
-                                <span class="mbr-iconfont socicon socicon-twitch"></span>
-                            </a>
-                        </div>
+
+
+
                     </div>
                 </div>
                 <div class="col-12 mt-5">
