--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
     <link rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,500,600,700,800,300i,400i,500i,600i,700i,800i&display=swap">
   </noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=iEASB5">
-  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=iEASB5" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=JOWPC6">
+  <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=JOWPC6" type="text/css">
 
 
 
@@ -84,9 +84,11 @@
             <a class="iconfont-wrapper"
               href="https://wa.me/556192914398?text=Ol%C3%A1%2C%20gostaria%20de%20conhecer%20melhor%20a%20Tr%C3%ADade%20Construtora"
               target="_blank">
-              <span class="p-2 mbr-iconfont socicon-whatsapp socicon" style="font-size: 40px;"></span>
+              <span class="p-2 mbr-iconfont socicon-whatsapp socicon" style="font-size: 35px;"></span>
             </a>
-
+            <a class="iconfont-wrapper" href="https://www.instagram.com/triiade_construtora/">
+              <span class="p-2 mbr-iconfont socicon-instagram socicon" style="font-size: 35px;"></span>
+            </a>
 
 
           </div>
@@ -378,30 +380,19 @@
         <div class="col-12 mt-4">
           <div class="social-row">
             <div class="soc-item">
-              <a target="_blank">
-                <span class="mbr-iconfont socicon socicon-facebook display-7"></span>
+              <a href="https://www.instagram.com/triiade_construtora/" target="_blank">
+                <span class="mbr-iconfont display-7 socicon-instagram socicon"></span>
               </a>
             </div>
             <div class="soc-item">
-              <a target="_blank">
-                <span class="mbr-iconfont socicon-twitter socicon"></span>
+              <a href="https://wa.me/556192914398?text=Ol%C3%A1%2C%20gostaria%20de%20conhecer%20melhor%20a%20Tr%C3%ADade%20Construtora"
+                target="_blank">
+                <span class="mbr-iconfont socicon-whatsapp socicon"></span>
               </a>
             </div>
-            <div class="soc-item">
-              <a target="_blank">
-                <span class="mbr-iconfont socicon-instagram socicon"></span>
-              </a>
-            </div>
-            <div class="soc-item">
-              <a target="_blank">
-                <span class="mbr-iconfont socicon socicon-linkedin"></span>
-              </a>
-            </div>
-            <div class="soc-item">
-              <a target="_blank">
-                <span class="mbr-iconfont socicon socicon-twitch"></span>
-              </a>
-            </div>
+
+
+
           </div>
         </div>
         <div class="col-12 mt-5">
