ajuste titulo errado

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
       <div class="row justify-content-center mb-5">
         <div class="col-12 content-head">
           <div class="mbr-section-head">
-            <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"><strong>Algumas de Obras Que
+            <h4 class="mbr-section-title mbr-fonts-style align-center mb-0 display-2"><strong>Algumas Obras Que
                 Participamos</strong></h4>
 
           </div>
